# ecap_clamav_adapter

./: CREDITS  INSTALL  LICENSE  Makefile.am  Makefile.in  README  acinclude.m4  configure  configure.in
src/: Adapter.cc  Adapter.h  Antivirus.h  ClamAv.cc  ClamAv.h  Debugger.cc  Gadgets.cc  Gadgets.h  Makefile.am  Makefile.in  Service.cc  Service.h  Xaction.cc  Xaction.h  autoconf.h  autoconf.h.in
